init project ci pipeline

--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,10 @@ apply plugin: 'kotlin-spring'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
-group = 'com.dvorac.ancestry'
-version = '0.0.1-SNAPSHOT'
+group = System.getenv('APP_GROUP') ?: 'com.dvorac.ancestry'
+
+version = System.getenv('APP_VERSION') ?: '0.0.1'
+
 sourceCompatibility = 1.8
 
 compileKotlin {
