trying repackage again

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
     - BUILD=1
 
 script:
-  - ./gradlew build
+  - ./gradlew bootRepackage
 
 deploy:
   provider: elasticbeanstalk
@@ -23,6 +23,7 @@ deploy:
   bucket_name: "elasticbeanstalk-us-east-1-115183919983"
   skip_cleanup: true
   zip_file: ./build/libs/ancestry-api-0.0.1.jar
+  only_create_app_version: true
   on:
     branch: dev
     condition: "$TRAVIS_PULL_REQUEST = false"
