--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ repositories {
 	mavenCentral()
 }
 
+bootRepackage {
+	executable = true
+}
+
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
